# Closed_hub

./: .dockerignore  .dvcignore  .env.example  .gitignore  Dockerfile  README.md  change_1.md  change_10.md  change_11.md  change_12.md  change_16.md  change_18.md  change_19.md  change_2.md  change_20.md  change_22.md  change_25.md  change_28.md  change_29.md  change_3.md  change_31.md  change_32.md  change_36.md  change_38.md  change_5.md  change_6.md  change_7.md  config.py  docker-compose.yml  dvc.yaml  links.txt  pyproject.toml  requirements.txt
.cursor/agents/: ai-engineer.md  backend-engineer.md  community-architect.md  database-designer.md  product-strategist.md  telegram-bot-engineer.md
bot/: keyboards.py  main.py
bot/handlers/: callbacks.py  library_cmd.py  (+3 more)
config/: activity_points.json  hr_sheet_context.json
db/: pool.py  repo.py  schema.sql  schema_patch.py
prompts/: classify.txt  company_match.txt  event_clarity.txt  event_dedup.txt  event_summary.txt  file_summarize.txt  hr_extract.txt  interview_extract.txt  interview_preview_user.txt  voice_context.txt
scripts/: print-web-lan-url.sh
services/: activity.py  activity_announce.py  activity_points.py  company_sync.py  event_summary_worker.py  events_service.py  file_storage.py  files_service.py  google_sheets_hr.py  groq_voice.py  hr_context_config.py  hr_service.py  interview_service.py  interviews_store.py  llm.py  ml_forward_service.py  routing.py
utils/: company_sheet.py  company_slug.py  nav_labels.py  telegram_user.py  text_slug.py
web/: __init__.py  app.py  backfill_summaries.py  main.py
(+55 files in other folders)
