[project]
name = "closed-hub"
version = "0.1.0"
description = "Telegram-бот закрытого хаба: сбор мероприятий, HR, файлов в PostgreSQL + Mistral."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]==21.10",
    "asyncpg==0.30.0",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
    "pypdf==5.1.0",
    "gspread==6.2.1",
    "google-auth==2.41.1",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.20",
    "itsdangerous==2.2.0",
]

[project.scripts]
closed-hub-bot = "bot.main:main"
closed-hub-web = "web.main:main"

[tool.uv]
package = false
default-groups = []
